--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,20 +17,22 @@ variables:
 .test_template: &test_definition
     stage: test
     script:
-      - source $DEVEL_HPP_DIR/config.sh
-      - cd $DEVEL_HPP_DIR/src/hpp-util/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-fcl/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-pinocchio/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-statistics/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-constraints/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-core/build-rel && make test
-        #- cd $DEVEL_HPP_DIR/src/hpp-corbaserver/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-manipulation/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-manipulation-urdf/build-rel && make test
-        #- cd $DEVEL_HPP_DIR/src/hpp-manipulation-corba/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-walkgen/build-rel && make test
-      - cd $DEVEL_HPP_DIR/src/hpp-wholebody-step/build-rel && make test
-        #- cd $DEVEL_HPP_DIR/src/hpp-wholebody-step-corba/build-rel && make test
+      - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\ncd $DEVEL_HPP_DIR/src/\$1/build-rel && make test" > $DEVEL_HPP_DIR/test.sh
+      - cat $DEVEL_HPP_DIR/test.sh
+      - chmod u+x $DEVEL_HPP_DIR/test.sh
+      - $DEVEL_HPP_DIR/test.sh hpp-util
+      - $DEVEL_HPP_DIR/test.sh hpp-fcl
+      - $DEVEL_HPP_DIR/test.sh hpp-pinocchio
+      - $DEVEL_HPP_DIR/test.sh hpp-statistics
+      - $DEVEL_HPP_DIR/test.sh hpp-constraints
+      - $DEVEL_HPP_DIR/test.sh hpp-core
+        #- $DEVEL_HPP_DIR/test.sh hpp-corbaserver
+      - $DEVEL_HPP_DIR/test.sh hpp-manipulation
+      - $DEVEL_HPP_DIR/test.sh hpp-manipulation-urdf
+        #- $DEVEL_HPP_DIR/test.sh hpp-manipulation-corba
+      - $DEVEL_HPP_DIR/test.sh hpp-walkgen
+      - $DEVEL_HPP_DIR/test.sh hpp-wholebody-step
+        #- $DEVEL_HPP_DIR/test.sh hpp-wholebody-step-corba
     allow_failure: true
     artifacts:
       paths:
