--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
     script:
       - export INSTALL_DOCUMENTATION=OFF
       - cp -r /clean_workspace $DEVEL_HPP_DIR
-      - /auto-install-hpp.sh --branch ${CI_COMMIT_REF_NAME}
+      - /auto-install-hpp.sh --branch ${CI_COMMIT_REF_NAME} --target benchmark
     artifacts:
       paths:
         - workspace
