--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ variables:
       - cp -r /clean_workspace $DEVEL_HPP_DIR
       - $CI_PROJECT_DIR/script/auto-install-hpp.sh --branch ${CI_COMMIT_REF_NAME} --gitrepo https://gepgitlab.laas.fr/humanoid-path-planner/hpp-doc/raw --target benchmark
     artifacts:
+      when: always
       paths:
         - workspace
 
@@ -35,17 +36,23 @@ variables:
         #- $DEVEL_HPP_DIR/test.sh hpp-wholebody-step-corba
     allow_failure: true
     artifacts:
+      when: always
       paths:
         - workspace
 
 .doc_template: &doc_definition
     stage: deploy
     script:
+      - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\nmake -C $DEVEL_HPP_DIR/src -s all" > $DEVEL_HPP_DIR/doc.sh
+      - cat $DEVEL_HPP_DIR/doc.sh
+      - chmod u+x $DEVEL_HPP_DIR/doc.sh
       - export INSTALL_DOCUMENTATION=ON
-      - make -C $DEVEL_HPP_DIR/src -s all
+        #- make -C $DEVEL_HPP_DIR/src -s all
+      - $DEVEL_HPP_DIR/doc.sh
       - tar czf hpp.${CI_COMMIT_REF_NAME}.`date +"%Y%m%d"`.tar.gz $DEVEL_HPP_DIR/install/share/doc
     allow_failure: true
     artifacts:
+      when: always
       paths:
         - workspace
 
