--- a/doc/Makefile
+++ b/doc/Makefile
@@ -189,6 +189,7 @@ all: hpp_tutorial.install hpp-gepetto-viewer.install
 
 benchmark: all hpp_romeo.install hpp_universal_robot.install \
 	hpp-baxter.install hpp-environments.install
+	${MAKE} hpp-pinocchio.install_nodep
 
 # source $DEVEL_HPP_DIR/install/setup.bash before installing hrp2.
 hrp2: test-hpp.install
