--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,22 +18,26 @@ variables:
 .test_template: &test_definition
     stage: test
     script:
-      - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\ncd $DEVEL_HPP_DIR/src/\$1/build-rel && make test" > $DEVEL_HPP_DIR/test.sh
+      - status=0
+      - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\ncd $DEVEL_HPP_DIR/src/\$1/build-rel && make CTEST_OUTPUT_ON_FAILURE=1 test" > $DEVEL_HPP_DIR/test.sh || status=1
       - cat $DEVEL_HPP_DIR/test.sh
+      - set +e
       - chmod u+x $DEVEL_HPP_DIR/test.sh
-      - $DEVEL_HPP_DIR/test.sh hpp-util
-      - $DEVEL_HPP_DIR/test.sh hpp-fcl
-      - $DEVEL_HPP_DIR/test.sh hpp-pinocchio
-      - $DEVEL_HPP_DIR/test.sh hpp-statistics
-      - $DEVEL_HPP_DIR/test.sh hpp-constraints
-      - $DEVEL_HPP_DIR/test.sh hpp-core
-        #- $DEVEL_HPP_DIR/test.sh hpp-corbaserver
-      - $DEVEL_HPP_DIR/test.sh hpp-manipulation
-      - $DEVEL_HPP_DIR/test.sh hpp-manipulation-urdf
-        #- $DEVEL_HPP_DIR/test.sh hpp-manipulation-corba
-      - $DEVEL_HPP_DIR/test.sh hpp-walkgen
-      - $DEVEL_HPP_DIR/test.sh hpp-wholebody-step
-        #- $DEVEL_HPP_DIR/test.sh hpp-wholebody-step-corba
+      - $DEVEL_HPP_DIR/test.sh hpp-util                    || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-fcl                     || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-pinocchio               || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-statistics              || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-constraints             || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-core                    || status=1
+        #- $DEVEL_HPP_DIR/test.sh hpp-corbaserver          || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-manipulation            || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-manipulation-urdf       || status=1
+        #- $DEVEL_HPP_DIR/test.sh hpp-manipulation-corba   || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-walkgen                 || status=1
+      - $DEVEL_HPP_DIR/test.sh hpp-wholebody-step          || status=1
+        #- $DEVEL_HPP_DIR/test.sh hpp-wholebody-step-corba || status=1
+      - set -e
+      - exit $status
     allow_failure: true
     artifacts:
       when: always
@@ -49,7 +53,7 @@ variables:
       - export INSTALL_DOCUMENTATION=ON
         #- make -C $DEVEL_HPP_DIR/src -s all
       - $DEVEL_HPP_DIR/doc.sh
-      - tar czf hpp.${CI_COMMIT_REF_NAME}.`date +"%Y%m%d"`.tar.gz $DEVEL_HPP_DIR/install/share/doc
+      - tar czf ${DEVEL_HPP_DIR}/hpp.${CI_COMMIT_REF_NAME}.`date +"%Y%m%d"`.tar.gz $DEVEL_HPP_DIR/install/share/doc
     allow_failure: true
     artifacts:
       when: always
