--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Humanoid Path Planner
 description: Software for Motion and Manipulation Planning
 baseurl: "/hpp-doc"
 github-url: "https://github.com/humanoid-path-planner/hpp-doc"
+apidoc-url: "http://projects.laas.fr/gepetto/hpp"
 remote_theme: Gepetto/jekyll-theme
 markdown: kramdown
 
@@ -14,7 +15,7 @@ category_list:
       - name: Presentation
         url: https://humanoid-path-planner.github.io/hpp-doc/assets/hpp-presentation.pdf
       - name: API documentation
-        url: https://humanoid-path-planner.github.io/hpp-doc/api/hpp-doc/index.html
+        url: https://humanoid-path-planner.github.io/hpp-doc/documentation.html
   - name: Development
     icon: wrench
     links:
