[CI] reduce docker context to the script/ folder

--- a/.dockers/ubuntu-14.04/Dockerfile
+++ b/.dockers/ubuntu-14.04/Dockerfile
@@ -42,4 +42,4 @@ RUN apt-get update -qqy && apt-get install -qqy \
    wget \
    && rm -rf /var/lib/apt/lists/*
 
-COPY script/auto-install-hpp.sh /
+COPY auto-install-hpp.sh /
