--- a/.dockers/ubuntu-16.04/Dockerfile.premade
+++ b/.dockers/ubuntu-16.04/Dockerfile.premade
@@ -1,10 +1,7 @@
 FROM eur0c.laas.fr:5000/humanoid-path-planner/hpp-doc/ubuntu:16.04
 
-RUN export DEVEL_HPP_DIR=/builds/humanoid-path-planner/hpp-doc/workspace; \
-      /auto-install-hpp.sh --branch devel --target OpenSceneGraph-dae-plugin.install
-RUN export DEVEL_HPP_DIR=/builds/humanoid-path-planner/hpp-doc/workspace; \
-      /auto-install-hpp.sh --branch devel --target qpOASES.install
-RUN export DEVEL_HPP_DIR=/builds/humanoid-path-planner/hpp-doc/workspace; \
-      /auto-install-hpp.sh --branch devel --target roboptim-trajectory-3.1.install
-RUN export DEVEL_HPP_DIR=/builds/humanoid-path-planner/hpp-doc/workspace; \
-      mv $DEVEL_HPP_DIR /clean_workspace
+ENV DEVEL_HPP_DIR /workspace
+
+RUN /auto-install-hpp.sh --branch devel --target OpenSceneGraph-dae-plugin.install
+RUN /auto-install-hpp.sh --branch devel --target qpOASES.install
+RUN /auto-install-hpp.sh --branch devel --target roboptim-trajectory-3.1.install
