--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,15 @@
 variables:
     GIT_SSL_NO_VERIFY: "true"
     GIT_SUBMODULE_STRATEGY: "recursive"
-    DEVEL_HPP_DIR: "$CI_PROJECT_DIR/workspace"
+    DEVEL_HPP_DIR: "/workspace"
     BUILD_TYPE: "Release"
 
 .build_template: &build_definition
     stage: build
     script:
       - export INSTALL_DOCUMENTATION=OFF
-      - cp -r /clean_workspace $DEVEL_HPP_DIR
       - $CI_PROJECT_DIR/script/auto-install-hpp.sh --branch ${CI_COMMIT_REF_NAME} --gitrepo ${CI_PROJECT_URL}/raw --target test-ci
+      - mv $DEVEL_HPP_DIR $CI_PROJECT_DIR
     artifacts:
       expire_in: 1 day
       when: always
@@ -19,6 +19,7 @@ variables:
 .test_template: &test_definition
     stage: test
     script:
+      - mv workspace /
       - status=0
       - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\ncd $DEVEL_HPP_DIR/src/\$1/build-rel && make CTEST_OUTPUT_ON_FAILURE=1 test" > $DEVEL_HPP_DIR/test.sh || status=1
       - cat $DEVEL_HPP_DIR/test.sh
@@ -38,6 +39,7 @@ variables:
       - $DEVEL_HPP_DIR/test.sh hpp-wholebody-step          || status=1
         #- $DEVEL_HPP_DIR/test.sh hpp-wholebody-step-corba || status=1
       - set -e
+      - mv $DEVEL_HPP_DIR $CI_PROJECT_DIR
       - exit $status
     allow_failure: true
     artifacts:
@@ -49,6 +51,7 @@ variables:
 .doc_template: &doc_definition
     stage: deploy
     script:
+      - mv workspace /
       - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\nmake -C $DEVEL_HPP_DIR/src -s all" > $DEVEL_HPP_DIR/doc.sh
       - cat $DEVEL_HPP_DIR/doc.sh
       - chmod u+x $DEVEL_HPP_DIR/doc.sh
@@ -56,6 +59,7 @@ variables:
         #- make -C $DEVEL_HPP_DIR/src -s all
       - $DEVEL_HPP_DIR/doc.sh
       - tar czf ${DEVEL_HPP_DIR}/hpp.${CI_COMMIT_REF_NAME}.`date +"%Y%m%d"`.tar.gz $DEVEL_HPP_DIR/install/share/doc
+      - mv $DEVEL_HPP_DIR $CI_PROJECT_DIR
     allow_failure: true
     artifacts:
       expire_in: 1 day
