--- a/doc/Makefile
+++ b/doc/Makefile
@@ -199,7 +199,7 @@ all: hpp_tutorial.install hpp-gepetto-viewer.install
 test-ci: baxter_common.install romeo.install universal_robot.install \
 	hpp-environments.install
 	${MAKE} hpp_tutorial.install hpp-gepetto-viewer.install \
-	hpp_universal_robot.install; \
+	hpp_universal_robot.install && \
 	${MAKE} hpp-doc.install
 
 # For benchmark, install robot packages first
