--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ variables:
 .test_template: &test_definition
     stage: test
     script:
+      - rm -rf /workspace
       - mv workspace /
       - status=0
       - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\ncd $DEVEL_HPP_DIR/src/\$1/build-rel && make CTEST_OUTPUT_ON_FAILURE=1 test" > $DEVEL_HPP_DIR/test.sh || status=1
@@ -51,6 +52,7 @@ variables:
 .doc_template: &doc_definition
     stage: deploy
     script:
+      - rm -rf /workspace
       - mv workspace /
       - echo -e "#!/bin/bash\nsource $DEVEL_HPP_DIR/config.sh\nmake -C $DEVEL_HPP_DIR/src -s all" > $DEVEL_HPP_DIR/doc.sh
       - cat $DEVEL_HPP_DIR/doc.sh
