--- a/.dockers/ubuntu-14.04/Dockerfile
+++ b/.dockers/ubuntu-14.04/Dockerfile
@@ -40,8 +40,8 @@ RUN apt-get update -qqy && apt-get install -qqy \
    ros-indigo-pr2-description \
    source-highlight \
    wget \
-   && apt-get remove -qqy texlive \
-   && apt-get autoremove \
+   && apt-get remove -qqy texlive-latex-base texlive-binaries ghostscript \
+   && apt-get autoremove -qqy \
    && rm -rf /var/lib/apt/lists/*
 
 COPY auto-install-hpp.sh /
