--- a/.dockers/ubuntu-16.04/Dockerfile
+++ b/.dockers/ubuntu-16.04/Dockerfile
@@ -6,6 +6,8 @@ RUN apt-get update -qqy && apt-get install -qqy \
 
 RUN echo "deb http://packages.ros.org/ros/ubuntu xenial main" > /etc/apt/sources.list.d/ros-latest.list
 RUN apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
+RUN echo "deb [arch=amd64] http://robotpkg.openrobots.org/packages/debian/pub xenial robotpkg" > /etc/apt/sources.list.d/robotpkg.list
+RUN curl http://robotpkg.openrobots.org/packages/debian/robotpkg.key | apt-key add -
 
 RUN apt-get update -qqy && apt-get upgrade -qqy
 RUN apt-get install -qqy sudo wget
@@ -17,6 +19,8 @@ RUN apt-get install -qqy \
       libboost-dev \
       liburdfdom-dev \
       libassimp-dev \
+      robotpkg-roboptim-core \
+      robotpkg-roboptim-trajectory \
       ros-kinetic-xacro \
       ros-kinetic-kdl-parser \
       ros-kinetic-common-msgs \
