Fix installation when INSTALL_DOCUMENTATION is FALSE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,8 +108,10 @@ INSTALL(DIRECTORY
   doc/images
   doc/figures
   DESTINATION ${CMAKE_INSTALL_DOCDIR})
-INSTALL(
-  FILES ${CMAKE_CURRENT_BINARY_DIR}/doc/doxygen-xml/index.xml
-  DESTINATION ${CMAKE_INSTALL_DOCDIR}/doxygen-html)
+IF(NOT DEFINED INSTALL_DOCUMENTATION OR ${INSTALL_DOCUMENTATION})
+  INSTALL(
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/doc/doxygen-xml/index.xml
+    DESTINATION ${CMAKE_INSTALL_DOCDIR}/doxygen-html)
+ENDIF()
 
 setup_project_finalize()
